[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.12.0", features = ["full"] }
volo-gen = { path = "mini_redis/volo-gen" }
mini_redis = { path = "mini_redis" }
serde = "1.0.188"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
faststr = "0.2.11"
volo-thrift = "*"
reqwest = "0.11.20"
structopt = "0.3.24"
